--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <title>Prueba</title>
   <meta name="description" content="">
   <meta name="author" content="">
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-  <script src="js/losmanitos.js"></script>
+  <script type='text/javascript' src='http://192.185.4.18/~dulcevictori/test2/wp-includes/js/jquery/jquery.js?ver=1.11.2'></script>
+  
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -16,9 +15,10 @@
 
 <body>
 <aside id="woocommerce_product_categories-4" class="widget woocommerce widget_product_categories"><h1 class="widget-title">Categorías</h1>
-<ul class="product-categories">
+<ul id="product-categories">
 	<li class="cat-item cat-item-207"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/accesorios/">Accesorios</a></li>
-	<li class="cat-item cat-item-209"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/capas/">Capas</a></li>
+	<li class="cat-item cat-item-208"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/capas/">Capas</a></li>
+	<li class="cat-item cat-item-209"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/accesorios/capas/">* Capas</a></li>
 	<li class="cat-item cat-item-210"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/chaquetas/">Chaquetas</a></li>
 	<li class="cat-item cat-item-229"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/coloralmendra/">color:Almendra</a></li>
 	<li class="cat-item cat-item-225"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/colorblanco/">color:Blanco</a></li>
@@ -37,8 +37,8 @@
 	<li class="cat-item cat-item-217"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/colorsc/">color:sc</a></li>
 	<li class="cat-item cat-item-228"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/colortostado/">color:Tostado</a></li>
 	<li class="cat-item cat-item-222"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/colorvainilla/">color:Vainilla</a></li>
-	<li class="cat-item cat-item-208"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/vestidos/">Vestidos</a></li>
 </ul>
 </aside> 
+<script src="js/losmanitos.js"></script>
 </body>
 </html>
