--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 <aside id="woocommerce_product_categories-4" class="widget woocommerce widget_product_categories"><h1 class="widget-title">Categorías</h1>
-<ul id="product-categories">
+<ul class="product-categories">
 	<li class="cat-item cat-item-207"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/accesorios/">Accesorios</a></li>
 	<li class="cat-item cat-item-208"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/capas/">Capas</a></li>
 	<li class="cat-item cat-item-209"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/accesorios/capas/">* Capas</a></li>
