mejorados display de categorias

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <aside id="woocommerce_product_categories-4" class="widget woocommerce widget_product_categories"><h1 class="widget-title">Categorías</h1>
 <ul class="product-categories">
 	<li class="cat-item cat-item-207"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/accesorios/">Accesorios</a></li>
-	<li class="cat-item cat-item-208"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/capas/">Capas</a></li>
+	<li class="cat-item cat-item-208"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/vestidos/capas/">Capas</a></li>
 	<li class="cat-item cat-item-209"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/accesorios/capas/">* Capas</a></li>
-	<li class="cat-item cat-item-210"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/chaquetas/">Chaquetas</a></li>
+	<li class="cat-item cat-item-210"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/accesorios/chaquetas/">Chaquetas</a></li>
 	<li class="cat-item cat-item-229"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/coloralmendra/">color:Almendra</a></li>
 	<li class="cat-item cat-item-225"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/colorblanco/">color:Blanco</a></li>
 	<li class="cat-item cat-item-241"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/colorblanco-marfil/">color:Blanco Marfil</a></li>
@@ -28,6 +28,7 @@
 	<li class="cat-item cat-item-227"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/colorcrudo/">color:Crudo</a></li>
 	<li class="cat-item cat-item-224"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/colorestampado/">color:Estampado</a></li>
 	<li class="cat-item cat-item-231"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/colorgris/">color:Gris</a></li>
+	<li class="cat-item cat-item-232"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/accesorios/vestidos/">Vestidos</a></li>
 	<li class="cat-item cat-item-226"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/colornegro/">color:Negro</a></li>
 	<li class="cat-item cat-item-223"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/colornude/">color:Nude</a></li>
 	<li class="cat-item cat-item-219"><a href="http://192.185.4.18/~dulcevictori/test2/ver-categoria/colorpalo-rosa/">color:Palo Rosa</a></li>
